[package]
name = "promg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
tower-livereload = "0.7.1"
poloto = "17.1.0"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
eyre = "0.6.8"
thiserror = "1.0.38"
